fix: remove icon squeeze on mobile buttons

--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,7 @@ $white: #fff;
   border: none;
   height: 3rem;
   width: 3rem;
+  padding: .75rem;
   justify-content: center;
   align-items:center;
   &:hover, &:focus {
